tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop-bound.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:9:68
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                                    ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:9:68
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                                    ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:20:15
   |
LL |     T: ~const Destruct,
   |               ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:21:15
   |
LL |     E: ~const Destruct,
   |               ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:20:15
   |
LL |     T: ~const Destruct,
   |               ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:21:15
   |
LL |     E: ~const Destruct,
   |               ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0493]: destructor of `E` cannot be evaluated at compile-time
  --> $DIR/const-drop-bound.rs:12:13
   |
LL |         Err(_e) => None,
   |             ^^ the destructor for this type cannot be evaluated in constant functions

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0493`.
